fix responsive gap

--- a/src/CSS/General/Components/PodcastApp.scss
+++ b/src/CSS/General/Components/PodcastApp.scss
@@ -1,3 +1,11 @@
+.wrapper-applications {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+	// padding: 20px 0px;
+}
+
 .podcast-app-card {
 	background-color: white;
 	border-radius: 10px;
@@ -41,6 +49,11 @@
 
 
 @media screen and (min-width:320px) and (max-width:425px) {
+
+	.wrapper-applications {
+		gap: 5px;
+	}
+
 	.podcast-app-card{
 		width: 150px;
 
